# kache

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.dockerfile  build.sh
.github/workflows/: build.yml  ci.yml
charts/kache/templates/: pdb.yaml  validatingwebhookconfiguration.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  certificate.yaml  deployment.yaml  hpa.yaml  issuer.yaml  service.yaml  serviceaccount.yaml  validatingwebhookconfiguration.yaml
src/: main.rs
