[package]
name = "kache"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
prometheus = "0.14"
rustls = "0.23"
k8s-openapi = { version = "0.25", features = ["v1_33"] }
kube = {version = "1", features = ["admission"]}

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
